# c-

./: CMakeLists.txt  README.md  compile_qtwidgets.sh  main  main.cpp  main.qml
.github/workflows/: c-cpp.yml
myCalculator/: calculator
myNotes/: AnnotationDialog.cpp  AnnotationDialog.h  CMakeLists.txt  HighlightAnnotationWidget.cpp  HighlightAnnotationWidget.h  main.cpp
myPencil/: CMakeLists.txt  PencilDrawWidget.cpp  PencilDrawWidget.h  main.cpp
